[package]
name = "rust-simulation-tools"
version = "0.1.7"
edition = "2021"

[lib]
name = "kabsch_align_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = "0.15"
nalgebra = "0.32"
rayon = "1.11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
