[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust_simulation_tools"
version = "0.1.0"
description = "Fast algorithms for MD trajectories"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rust_simulation_tools"
